chore: Fix typo in video title

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                     <div class="mini-label-container fadeInText">
                         <span class="mini-label">1:16 MIN</span>
                     </div>
-                    <span class="video-title fadeInText">LOAD WITH a PREPAID CARD</span>
+                    <span class="video-title fadeInText">LOAD WITH A PREPAID CARD</span>
                 </div>
             </a>
             <a class="video-container fadeIn " href="https://www.youtube.com/watch?v=21Tj1qVic9E" target="_blank">
