--- a/index_es.html
+++ b/index_es.html
@@ -15,7 +15,7 @@
             <div class="navContainer">
                 <div style="display: flex; align-items: center">
                     <img src="assets/img/arrow_back_icon.png" alt="" class="backArrowIcon">
-                    <h3 class="backLabel">BACK</h3>
+                    <h3 class="backLabel">ATRAS</h3>
                 </div>
                 <a href="https://test-ventures.com/sacbepayments/sacbe_support/v1/#/index">
                     <img src="assets/img/support_icon.svg" alt="support">
@@ -28,7 +28,7 @@
                             <img src="./assets/img/sacbe_logo.svg" class="sacbe-logo fadeInText" alt="sacbe_logo">
                             <img src="./assets/img/visa_logo.svg" class="master-card-logo fadeInText" alt="visa_logo">
                         </div>
-                        <h1 class="panel-title fadeInText">TUTORIAL VIDEOS</h1>
+                        <h1 class="panel-title fadeInText">VIDEOS TUTORIALES</h1>
                     </div>
                 </div>
             </div>
@@ -40,7 +40,7 @@
                     <div class="mini-label-container fadeInText">
                         <span class="mini-label">1:46 MIN</span>
                     </div>
-                    <span class="video-title fadeInText">HOW TO ADD A NEW CARD?</span>
+                    <span class="video-title fadeInText">¿CÓMO AGREGAR UNA NUEVA TARJETA?</span>
                 </div>
             </a>
             <a class="video-container fadeIn" href="https://www.youtube.com/watch?v=-e9iCr4M2UQ" target="_blank">
@@ -48,7 +48,7 @@
                     <div class="mini-label-container fadeInText">
                         <span class="mini-label">1:33 MIN</span>
                     </div>
-                    <span class="video-title fadeInText">HOW TO TOP UP?</span>
+                    <span class="video-title fadeInText">¿CÓMO RECARGAR?</span>
                 </div>
             </a>
             <a class="video-container fadeIn" href="https://www.youtube.com/watch?v=wfTyq5IBsaI" target="_blank">
@@ -56,7 +56,7 @@
                     <div class="mini-label-container fadeInText">
                         <span class="mini-label">1:15 MIN</span>
                     </div>
-                    <span class="video-title fadeInText">HOW TO PAY BILLS?</span>
+                    <span class="video-title fadeInText">¿CÓMO PAGAR LAS FACTURAS?</span>
                 </div>
             </a>
             <a class="video-container fadeIn" href="https://www.youtube.com/watch?v=-pmedccVc3Y" target="_blank">
@@ -64,15 +64,17 @@
                     <div class="mini-label-container fadeInText">
                         <span class="mini-label">1:28 MIN</span>
                     </div>
-                    <span class="video-title fadeInText">HOW TO REQUEST YOUR CARD?</span>
+                    <span class="video-title fadeInText">
+                        ¿CÓMO SOLICITAR TU TARJETA?</span>
                 </div>
             </a>
-            <a class="video-container fadeIn " href="https://www.youtube.com/watch?v=SNN9tK99cCo" target="_blank">
+            <a class="video-container fadeIn " href="https://www.youtube.com/watch?v=dNESFn6x_t0" target="_blank">
                 <div class="video-item">
                     <div class="mini-label-container fadeInText">
                         <span class="mini-label">1:36 MIN</span>
                     </div>
-                    <span class="video-title fadeInText">HOW TO SEND MONEY?</span>
+                    <span class="video-title fadeInText">
+                        ¿CÓMO ENVIAR DINERO?</span>
                 </div>
             </a>
             <a class="video-container fadeIn" href="https://www.youtube.com/watch?v=dwmmmMFZc3o" target="_blank">
@@ -80,7 +82,7 @@
                     <div class="mini-label-container fadeInText">
                         <span class="mini-label">1:37 MIN</span>
                     </div>
-                    <span class="video-title fadeInText">HOW TO REQUEST MONEY?</span>
+                    <span class="video-title fadeInText">¿CÓMO SOLICITAR DINERO?</span>
                 </div>
             </a>
             <a class="video-container fadeIn " href="https://www.youtube.com/watch?v=7crKuS0UjgI" target="_blank">
@@ -88,7 +90,7 @@
                     <div class="mini-label-container fadeInText">
                         <span class="mini-label">1:16 MIN</span>
                     </div>
-                    <span class="video-title fadeInText">LOAD WITH A PREPAID CARD</span>
+                    <span class="video-title fadeInText">CARGAR CON TARJETA PREPAGO</span>
                 </div>
             </a>
             <a class="video-container fadeIn " href="https://www.youtube.com/watch?v=21Tj1qVic9E" target="_blank">
@@ -96,7 +98,7 @@
                     <div class="mini-label-container fadeInText">
                         <span class="mini-label">2:16 MIN</span>
                     </div>
-                    <span class="video-title fadeInText">LOAD MONEY WITH ANY CARD</span>
+                    <span class="video-title fadeInText">CARGAR DINERO CON CUALQUIER TARJETA</span>
                 </div>
             </a>
         </div>
